JumpScript/tests/baselines/reference/genericTypeReferenceWithoutTypeArgument.errors.txt
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(8,8): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(10,13): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(11,14): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(11,18): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(12,11): error TS1023: An index signature parameter type must be 'string' or 'number'.
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(12,14): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(12,18): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(14,13): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(14,28): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(16,15): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(16,19): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(16,30): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(18,23): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(18,27): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(18,38): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(20,17): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(23,21): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(29,18): error TS2314: Generic type 'E<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(30,20): error TS2314: Generic type 'E<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(31,22): error TS2314: Generic type 'E<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(33,22): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(34,22): error TS2314: Generic type 'E<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(36,10): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump(37,10): error TS2314: Generic type 'E<T>' requires 1 type argument(s).


==== tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument.jump (24 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    class C<T> {
        foo: T;
    }
    
    var c: C;
           ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    var a: { x: C };
                ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    var b: { (x: C): C };
                 ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                     ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    var d: { [x: C]: C };
              ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
                 ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                     ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    var e = (x: C) => { var y: C; return y; }
                ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                               ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    function f(x: C): C { var y: C; return y; }
                  ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                      ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                                 ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    var g = function f(x: C): C { var y: C; return y; }
                          ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                              ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                                         ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    class D extends C {
                    ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    }
    
    interface I extends C {}
                        ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    module M {
        export class E<T> { foo: T }
    }
    
    class D2 extends M.E { }
                     ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    class D3<T extends M.E> { }
                       ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    interface I2 extends M.E { }
                         ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    
    function h<T extends C>(x: T) { }
                         ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    function i<T extends M.E>(x: T) { }
                         ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    
    var j = <C>null;
             ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    var k = <M.E>null;
             ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).